# ghostfs

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/ghostfs-cli/: Cargo.toml
crates/ghostfs-cli/src/: main.rs
crates/ghostfs-cli/src/commands/: add.rs  clean.rs  create.rs  dlx.rs  hooks.rs  init.rs  install.rs  link.rs  list.rs  mod.rs  remove.rs  run.rs
crates/ghostfs-core/: Cargo.toml
crates/ghostfs-core/src/: installer.rs  lib.rs  linker.rs  lockfile.rs  manifest.rs  resolver.rs  scaffold.rs
crates/ghostfs-registry/: Cargo.toml
crates/ghostfs-registry/src/: lib.rs  types.rs
crates/ghostfs-store/: Cargo.toml
crates/ghostfs-store/src/: db.rs  hash.rs  lib.rs
npm/ghostfs/: index.js  package.json
npm/ghostfs-darwin-arm64/: package.json
npm/ghostfs-darwin-x64/: package.json
npm/ghostfs-linux-x64/: package.json
npm/ghostfs-win32-x64/: package.json
runtime/: loader.mjs  resolver.js
