[workspace]
resolver = "2"
members = [
    "crates/ghostfs-cli",
    "crates/ghostfs-core",
    "crates/ghostfs-store",
    "crates/ghostfs-registry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Shejan Mahamud <ShejanMahamud@gmail.com>"]
repository = "https://github.com/ShejanMahamud/ghostfs"
homepage = "https://github.com/ShejanMahamud/ghostfs"
description = "Dependency Virtualization Engine for JavaScript — eliminate node_modules forever"
keywords = ["npm", "node", "package-manager", "javascript", "dependencies"]
categories = ["command-line-utilities", "development-tools"]
