[package]
name = "ghostfs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for GhostFS — resolver, installer, manifest, lockfile"

[dependencies]
ghostfs-store = { path = "../ghostfs-store", version = "1.0.0" }
ghostfs-registry = { path = "../ghostfs-registry", version = "1.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
junction = "1"
