[package]
name = "ghostfs-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Content-addressed package store for GhostFS"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
